--- a/app/src/main/res/layout/activity_relative.xml
+++ b/app/src/main/res/layout/activity_relative.xml
@@ -7,19 +7,21 @@
     tools:context=".ActivityRelative">
 
     <ImageView
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:background="@drawable/person_4_24"
-        android:layout_above="@id/tvNombre"
-        android:layout_centerHorizontal="true">
+        android:id="@+id/imagen"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:background="@drawable/avatar1_chico"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="50dp">
 
     </ImageView>
     <ListView
         android:id="@+id/lista"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="5dp"
+        android:layout_below="@+id/tvCorreo"
+        android:layout_marginTop="50dp"
         >
     </ListView>
     <TextView
@@ -27,8 +29,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Correo Electronico"
-        android:layout_above="@id/lista"
-        android:layout_marginBottom="40dp"
+        android:layout_marginTop="10dp"
+        android:layout_below="@id/tvNombre"
         android:layout_centerHorizontal="true">
     </TextView>
     <TextView
@@ -36,8 +38,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Nombre de Usuario"
-        android:layout_above="@id/tvCorreo"
-        android:layout_marginBottom="20dp"
+        android:layout_below="@id/imagen"
+        android:layout_marginTop="20dp"
         android:layout_centerHorizontal="true">
     </TextView>
     <ImageButton
