--- a/app/src/main/res/layout/layout_lista.xml
+++ b/app/src/main/res/layout/layout_lista.xml
@@ -2,7 +2,7 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/vista"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="40dp"
     android:textSize="20dp"
     android:textStyle="bold"
